libsdl2 (2.0.8+dfsg1-3.1) UNRELEASED; urgency=medium

  * Non-maintainer upload.
  * d/tests/build: Add autopkgtest to check that dynamic linking with
    either pkg-config or sdl2-config works correctly

 -- Simon McVittie <smcv@debian.org>  Sun, 30 Sep 2018 15:16:22 +0100

libsdl2 (2.0.8+dfsg1-3) unstable; urgency=medium

  [ Hugh McMaster <hugh.mcmaster@outlook.com> ]
  * Make libsdl2 coinstallable again (Closes: #909740).

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 27 Sep 2018 16:21:47 +0200

libsdl2 (2.0.8+dfsg1-2) unstable; urgency=medium

  [ Felix Geyer ]
  * Remove Multi-Arch: same from libsdl2-dev as SDL_config.h is architecture
    dependent.

  [ Gianfranco Costamagna ]
  * Team upload
  * Enable vulkan everywhere
  * debian/patches/SDL2-dynapi-symbol-resolution-fix.patch:
    cherry-pick upstream fix for Unity-based games shipping bundled
    libsdl2 version (LP: #1772471)
    - thanks Ryan Gordon for the patch and help

  [ Ryan C. Gordon (icculus) ]
  * Disable --disable-loadso switch, it was useless and it is wrong
    in many cases (see LP: #1740517 for discussion)

 -- Felix Geyer <fgeyer@debian.org>  Sun, 09 Sep 2018 01:41:38 +0200

libsdl2 (2.0.8+dfsg1-1) unstable; urgency=medium

  * New upstream release.
    - Fixes IBus not working properly. (Closes: #878484)

 -- Felix Geyer <fgeyer@debian.org>  Sun, 04 Mar 2018 12:07:25 +0100

libsdl2 (2.0.7+dfsg1-3) unstable; urgency=medium

  * Team upload.
  * Fix shlib symlink.

 -- Fabian Greffrath <fabian@debian.org>  Thu, 09 Nov 2017 17:26:43 +0100

libsdl2 (2.0.7+dfsg1-2) unstable; urgency=medium

  * Team upload
  * Bump std-version to 4.1.1, no changes required
  * Add fcitx support (Closes: #881042), thanks
    Zhang Jingqiang <zh_jq@outlook.com> for the report!
  * Switch URI in secure mode
  * Update copyright years
  * Enable also samplerate support
  * Also switch watch file in secure mode

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 07 Nov 2017 13:09:13 +0100
