@@ -66,7 +66,6 @@ Description: Simple DirectMedia Layer
 Package: libsdl2-dev
 Section: libdevel
 Architecture: any
-Multi-Arch: same
 Depends:
  libasound2-dev [linux-any],
  libdbus-1-dev,
