@@ -1,5 +1,4 @@
 usr/bin/sdl2-config
-usr/include/*/SDL2
 usr/include/SDL2
 usr/lib/*/cmake/SDL2/sdl2-config.cmake
 usr/lib/*/libSDL2*.so
