@@ -69,11 +69,6 @@ override_dh_auto_clean-indep:
 	rm -f debian/examples.tar.gz
 	rm -rf output
 
-override_dh_install:
-	mkdir -p debian/tmp/usr/include/$(DEB_HOST_MULTIARCH)/SDL2
-	mv debian/tmp/usr/include/SDL2/SDL_config.h debian/tmp/usr/include/$(DEB_HOST_MULTIARCH)/SDL2
-	dh_install
-
 override_dh_missing:
 	dh_missing --fail-missing -XlibSDL2.la -XlibSDL2main.la -XlibSDL2_test.la
 
