@@ -3,6 +3,8 @@ libsdl2 (2.0.8+dfsg1-3.1) UNRELEASED; urgency=medium
   * Non-maintainer upload.
   * d/tests/build: Add autopkgtest to check that dynamic linking with
     either pkg-config or sdl2-config works correctly
+  * Revert "Make libsdl2-dev coinstallable again"
+    (Closes: #909778) (reopens: #909740)
 
  -- Simon McVittie <smcv@debian.org>  Sun, 30 Sep 2018 15:16:22 +0100
 
